# unnamedblocks

./: .clang-format  .cmake-format  .gitignore  .gitmodules  CMakeLists.txt  Espresso Modding Development.txt  LICENSE  LICENSE.md  Makefile.am  Makefile.in  ModVin.la  PKGBUILD  README.md  SECURITY.md  UnnamedBlocks.sln  aclocal.m4  clion_code_style.xml  comp.c  compile_shaders.bat  compile_shaders.sh  config.h.in  configure  configure.ac  configure.bat  configure.sh  configure_debug.sh  configure_release.sh  documentation.sh  doxygen.conf  doxygen_css.css  format.sh  game.ub  imgui_12-15-2021.ini  imgui_12-4-2021.ini  index.html  initialize.bat  initialize.sh  libtool  lines.sh  message.ub  (+18 more)
Cappuccino/: CMakeLists.txt  Cappuccino.vcxproj  Cappuccino.vcxproj.filters  config.h.in
Cappuccino/include/Cappuccino/: Cappuccino.cc  Cappuccino.cpp  Cappuccino.h  CappuccinoMod.h  ExecutionThread.cpp  ExecutionThread.h  Intrinsics.cpp  Intrinsics.h  Logger.cpp  Logger.h  ModBlockPass.cpp  ModBlockPass.h  PreProcessorData.cpp  PreProcessorData.h  Registration.cpp  Registration.h
Cappuccino/include/Cappuccino/block/: ModBlock.cpp  ModBlock.h  ModBlockActions.cpp  ModBlockActions.h  ModBlockFlags.cpp  ModBlockFlags.h  ModBlockFlagsIterator.h
Cappuccino/include/Cappuccino/runtime/: DataKey.h  DataRegistry.cpp  DataRegistry.h  ModBlockData.cpp  ModBlockData.h
Espresso/: CMakeLists.txt  Espresso.vcxproj  Espresso.vcxproj.filters  config.h.in
Espresso/include/Espresso/: Espresso.h  Global.cpp  Global.h  InputHandler.cpp  InputHandler.h  Logger.h  esp_block.sh  esp_block2.sh  util.cpp  util.h
RHR/: CMakeLists.txt  RHR.vcxproj  RHR.vcxproj.filters  config.h.in
RHR/include/RHR/: ArgumentEssentials.h  Global.cpp  Global.h  RHR.cpp  RHR.h  StatmentIf.cpp  StatmentIf.h  config.h
RHR/include/RHR/ui/: Field.h  (+20 more)
UB_Cappuccino/: CMakeLists.txt  config.h.in
UB_Cappuccino/include/Cappuccino/: Cappuccino.cpp  Cappuccino.h  Cappuccino.hpp  Color.cpp  Color.hpp  ExecutionThread.cpp  ExecutionThread.h  ExecutionThread.hpp  Export.hpp  Logger.cpp  Logger.h  Logger.hpp  ModBlockPass.cpp  ModBlockPass.h  ModBlockPass.hpp  PreProcessorData.cpp  PreProcessorData.h  Registration.cpp  Registration.h  Registration.hpp  Utils.cpp  Utils.h  Utils.hpp
UB_Client/: CMakeLists.txt
UB_Client/src/: ModLoader.cpp  main.cpp
UB_Espresso/: CMakeLists.txt
UB_Espresso/include/Espresso/: Espresso.hpp  InputHandler.cpp  InputHandler.hpp  OLD_Global.cpp  OLD_Global.hpp  util.cpp  util.h
UB_RHR/: CMakeLists.txt
UnnamedBlocks/: .gitignore  Makefile  Makefile.am  Makefile.in  UnnamedBlocks.sln  UnnamedBlocks.vcxproj  UnnamedBlocks.vcxproj.filters  all.ub  config.log~9530ab106f6cf6aa9fa9e4293414fa8e256c06ca  configure  configure.ac  doc notes.txt  re.ub  reloadmakefiles.sh  res.7z  test.ub  therad.ub  thread.ub
UnnamedBlocks/mods/: ModVin.lib
UnnamedBlocks/res/: dots.fs  dots.vs
UnnamedBlocks/res/shaders/: intel_dots.fs  nvidia_dots.fs
UnnamedBlocks/src/: Global.cpp  Global.h  ModLoader.cpp  ModLoader.h  main.cpp
UnnamedBlocks/src/content/: ContentBytes.h  ContentExecution.h  ContentInput.h  ContentLoader.h  ContentObjects.h  ContentOperations.h  ContentTextures.h  ContentThreading.h  ContentTransform.h  ContentVariables.h
UnnamedBlocks/src/handlers/: Logger.h  MessageHandler.cpp  MessageHandler.h  ProjectHandler.cpp
UnnamedBlocks/src/registries/: BlockRegistry.cpp  BlockRegistry.h  ButtonRegistry.h  ShaderRegistry.cpp  ShaderRegistry.h
UnnamedBlocks/src/stacking/: Block.cpp  Block.h  Plane.cpp  Plane.h  Stack.cpp  Stack.h
UnnamedBlocks/src/ui/: Button.cpp  Button.h  TypingSystem.cpp  TypingSystem.h
VanillaMods/: CMakeLists.txt  Mod.cpp  Mod.h  VanillaMods.vcxproj  VanillaMods.vcxproj.filters
VanillaMods/ub-ModVin/: .gitignore  CMakeLists.txt  Mod.cpp  Mod.h  config.h.in
VanillaMods/ub-ModVin/include/: Mod.h  ModCategories.h
meta/dependencies/: CMakeLists.txt
mods/UB_ModVin/: CMakeLists.txt
mods/ub_mod_vin/: .gitignore  CMakeLists.txt
ub_cappuccino/: CMakeLists.txt  config.h.in
ub_cappuccino/include/cappuccino/: Cappuccino.cpp  ModBlockPass.hpp  PreProcessorData.hpp  Utils.cpp  Utils.hpp  build_system.cpp  build_system.hpp  cappuccino.cpp  cappuccino.h  cappuccino.hpp  color.cpp  color.hpp  cutils.h  data_key.cpp  data_key.hpp  data_registry.cpp  data_registry.hpp  execution_thread.cpp  execution_thread.hpp  export.hpp  intrinsics.cpp  intrinsics.hpp  logger.cpp  logger.hpp  preprocessor_data.cpp  preprocessor_data.hpp  registration.cpp  registration.hpp  utils.cpp  utils.hpp
ub_client/: CMakeLists.txt  config.h.in
ub_client/src/: main.cpp  mod_loader.cpp  mod_loader.hpp
ub_client/src/traffic/: shape_lane.hpp  traffic.cpp  traffic.hpp  utils.cpp  utils.hpp
ub_espresso/: CMakeLists.txt
ub_espresso/include/espresso/: InputHandler.hpp  argument.cpp  argument.hpp  block.cpp  block.hpp  category.cpp  category.hpp  color.cpp  color.hpp  input_handler.cpp  input_handler.hpp  mod_data.cpp  mod_data.hpp  mod_data_old.cpp  mod_data_old.hpp  mod_init.hpp  registry.cpp  registry.hpp  rt_argument.cpp  rt_argument.hpp  type.cpp  type.hpp
ub_latte/: CMakeLists.txt  lines.sh
ub_latte/include/latte/: cutils.h  file_synthesiser.cpp  file_synthesiser.hpp  logger.cpp  logger.hpp  serializer.cpp  serializer.hpp  utils.cpp  utils.hpp
ub_lungo/: CMakeLists.txt
ub_lungo/include/lungo/: cardinal.hpp  panel.cpp  panel.hpp  renderer.cpp  renderer.hpp  tools.cpp  tools.hpp  vertex.hpp
ub_macchiato/: CMakeLists.txt
ub_macchiato/include/macchiato/: command_buffer.cpp  command_buffer.hpp  command_pool.cpp  command_pool.hpp  descriptor_set.cpp  descriptor_set.hpp  device.cpp  device.hpp  framebuffer.cpp  framebuffer.hpp  input.cpp  input.hpp  pipeline.cpp  pipeline.hpp  renderer.hpp  renderpass.cpp  renderpass.hpp  swapchain.cpp  swapchain.hpp  texture_sampler.cpp  texture_sampler.hpp  validation_layer.cpp  validation_layer.hpp  vertex.cpp  vertex.hpp  vertex_std.cpp  vertex_std.hpp  window.cpp  window.hpp
ub_mocha/: CMakeLists.txt
ub_rhr/: CMakeLists.txt
ub_rhr/include/rhr/: OLD_RHR.hpp
(+1157 files in other folders)
